# it-academy

./: .travis.yml  README.md
hello/: CMakeLists.txt
hello/hello01/: CMakeLists.txt  main.cpp
hello/lib/: CMakeLists.txt  greetings.cpp  greetings.h
hello_world/: CMakeLists.txt  main.cpp  terminal_commands.txt.txt
test/01-1-hello-world/: ..travis.yml.swp  .travis.yml  CMakeLists.txt  main.cxx
test/01-2-hello-lib/: CMakeLists.txt
test/01-2-hello-lib/hello_bin/: CMakeLists.txt  main.cxx
test/01-2-hello-lib/hello_lib/: CMakeLists.txt  greetings.cpp  greetings.hpp
test/01-3-sample_lib/: a.out  build.sh
test/01-3-sample_lib/lib/: CMakeLists.txt
test/01-3-sample_lib/lib/sample_lib/: CMakeLists.txt  sample_module.cxx  sample_module.hpp
test/01-3-sample_lib/lib/sample_program/: CMakeLists.txt  main.cxx
test/02-1-sdl-static/: CMakeLists.txt  README.md
test/02-2-sdl-dynamic/: CMakeLists.txt  NOTCMakeLists.txt  main.cxx
test/03-1-sdl-loop/: ..gitignore.swp  CMakeLists.txt  README-main-loop.md  main.cxx
test/03-2-sdl-loop-to-engine/: CMakeLists.txt  engine.hxx
test/03-2-sdl-loot-to-engine/: CMakeLists.txt  engine.cxx
test/03-3-sdl-loop-to-engine-dll/: CMakeLists.txt  main.cxx
test/04-1-opengl-minimal/: CMakeLists.txt  README_OPENGL.md  engine.cxx  engine.hxx  main.cxx
test/04-1-opengl-triangle/: README_shader.md  engine.cxx  engine.hxx  main.cxx
test/05-1-vertex-morphing/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx
test/05-2-texture-loading/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx
test/05-3-tiny-animation-texture/: main.cxx  my_math.cxx  my_math.hxx
test/06-1-matrix/: CMakeLists.txt  engine.cxx  engine.hxx  main.cxx  my_math.cxx  my_math.hxx
test/06-2-matrix-multiply/: engine.cxx  engine.hxx  main.cxx  my_math.cxx
test/06-2-matrix-multiply/.metadata/: version.ini
test/06-2-matrix-multiply/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
test/06-2-matrix-multiply/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
test/06-2-matrix-multiply/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
test/06-2-matrix-multiply/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
test/06-2-matrix-multiply/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
test/07-1-sdl-sound-example/: CMakeLists.txt  audio.c  audio.h  main.c
test/07-2-sound-teacher-example/: CMakeLists.txt  vert_pos_color.txt  vert_tex_color.txt
test/08-1-engine/: actor.hxx  background.txt  barrier.txt  barrier_controller.hxx  bat_controller.hxx  camera.hxx  collision_box.hxx  color.cxx  controller.hxx  e_math.cxx  engine.cxx  engine.hxx  game.cxx  game_mode.hxx  hero_controller.hxx  pawn.hxx  texture.cxx  vert_tex_color.txt  vertex_buffer.hxx
test/08-3-engine/: .cproject  .project  CMakeLists.txt  _cproject.xml  _project.xml  actor.hxx  background.txt  barrier.txt  barrier_controller.hxx  camera.hxx  color.hxx  e_math.hxx  game_mode.hxx  hero_controller.hxx  sdl2_opengl.hxx  vertex_buffer.hxx
test/08-3-engine-teacher/: CMakeLists.txt  color.cxx  color.hxx  e_math.hxx  engine.cxx  engine.hxx  game.cxx  picopng.hxx
test/08-3-engine/.metadata/: version.ini
test/08-3-engine/.metadata/.plugins/org.eclipse.cdt.core/: _log.txt
test/08-3-engine/.metadata/.plugins/org.eclipse.core.resources/.root/: 2.tree
test/08-3-engine/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
test/08-3-engine/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
test/08-3-engine/.metadata/.plugins/org.eclipse.epp.logging.aeri.ide/org.eclipse.epp.logging.aeri.ide.server/: server-config.json
test/08-3-engine/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
test/08-3-engine/.tracecompass/: _project.xml
test/08-engine/: CMakeLists.txt  actor.hxx  background.txt  barrier.txt  camera.hxx  character.hxx  character_imp.hxx  collision_box.hxx  controller.hxx  e_math.cxx  e_math.hxx  engine.cxx  engine.hxx  game.cxx  game_mode.hxx  girl.pxd  pawn.hxx  texture.hxx  vert_tex_color.txt  vertex_buffer.hxx  world.hxx
test/09-engine/: actor.hxx  camera.hxx  character.hxx  controller.hxx  engine.cxx  engine.hxx  game_mode.hxx  pawn.hxx  vertex_buffer.hxx  world.hxx
(+16 files in other folders)
